[package]
name = "multicodec"
description = "implementing the multicodec spec"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnunicorn/rust-multicodec"
readme = "Readme.md"
keywords = ["multiformats", "multicodec", "serde"]

[badges]
travis-ci = { repository = "gnunicorn/rust-multicodec", branch = "master"}

[dependencies]
unsigned-varint = "0.2"
failure = "0.1"
serde = "1.0"
